# git-alerts-api

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
api/api/: celery.py  config.py  logging.py  settings.py  urls.py  views.py
api/core/: admin.py  crypto.py  models.py  serializers.py  urls.py  views.py
api/core/clients/: github_client.py  trufflehog_client.py
api/core/migrations/: 0001_initial.py  0002_reposcanhistory_findings_count.py  0003_remove_reposcanhistory_scan.py  0004_systemsettings.py  0005_rename_include_unverified_to_verified_only.py  0006_systemsettings_org_repos_only.py
api/core/services/: scan_orchestrator.py
api/findings/: admin.py  models.py  serializers.py  urls.py  views.py
api/findings/migrations/: 0001_initial.py  0002_ignorefindingdomain_ignorefindingtype_and_more.py  0003_alter_finding_commit_url_alter_finding_description_and_more.py  0004_finding_validated.py
api/integrations/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/integrations/migrations/: 0001_initial.py  0002_userintegration_status.py  0003_alter_userintegration_options.py  0004_alter_userintegration_status.py  0005_userintegration_error_message_and_more.py
api/logs/: .gitkeep
api/scans/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/scans/migrations/: 0001_initial.py  0002_alter_scan_options_scan_completed_at_scan_created_at_and_more.py  0003_alter_scan_id.py  0004_alter_scan_id.py  0006_remove_scan_scanned_users.py  (+5 more)
(+34 files in other folders)
